--- a/TestProject/TestProject.csproj
+++ b/TestProject/TestProject.csproj
@@ -91,6 +91,9 @@
     <Content Include="Test.xml" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\.editorconfig">
+      <Link>.editorconfig</Link>
+    </None>
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
